[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "cmake>=3.18",
#    "ninja",
]
build-backend = "setuptools.build_meta"
[project]
name = "pynari"
dynamic=["version"]
#version = "1.0.2"
authors = [
  { name="Ingo Wald", email="ingowald@gmail.com" },
]
#dependencies = [
#"tbb-devel"
#]
description = "Python bindings for ANARI"
readme = "README.md"
#requires-python = ">=3.12"
requires-python = ">= 3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/ingowald/pynari"
Issues = "https://github.com/ingowald/pynari/issues"
